// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test click handler 1`] = `
<div
  className="Pinpoint Documentation Title clickable "
  onClick={[Function]}
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link  Pinpoint Logo sm "
  >
    <img
      alt=""
      className="Pinpoint Image image"
      decoding="async"
      height={320}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={320}
    />
  </span>
  <div
    className="text"
  >
    Pinpoint
  </div>
</div>
`;

exports[`Test custom className 1`] = `
<div
  className="Pinpoint Documentation Title  test-custom"
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link  Pinpoint Logo sm "
  >
    <img
      alt=""
      className="Pinpoint Image image"
      decoding="async"
      height={320}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={320}
    />
  </span>
  <div
    className="text"
  >
    Pinpoint
  </div>
</div>
`;

exports[`Test custom text 1`] = `
<div
  className="Pinpoint Documentation Title  "
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link  Pinpoint Logo sm "
  >
    <img
      alt=""
      className="Pinpoint Image image"
      decoding="async"
      height={320}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={320}
    />
  </span>
  <div
    className="text"
  >
    Test Cutom Title Text
  </div>
</div>
`;

exports[`Test default state 1`] = `
<div
  className="Pinpoint Documentation Title  "
>
  <span
    aria-label="Logo"
    className="Pinpoint Internal Link  Pinpoint Logo sm "
  >
    <img
      alt=""
      className="Pinpoint Image image"
      decoding="async"
      height={320}
      loading="lazy"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      width={320}
    />
  </span>
  <div
    className="text"
  >
    Pinpoint
  </div>
</div>
`;
